--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "react": "17.0.2",
-    "react-native": "0.68.1"
+    "react-native": "0.68.1",
+    "react-native-gesture-handler": "^2.4.0",
+    "react-native-render-html": "^6.3.4",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -37,6 +43,12 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFiles": [
+        "<rootDir>/jest/setup.js"
+    ],
+    "transformIgnorePatterns": [
+        "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
